after joining HAC company , and add some updates to inventory according to there needs